# SlicerLayerDisplayableManager

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  extension.cmake  pyproject.toml  releaserc.toml  wheel.cmake
.github/workflows/: build-wheels.yml  ci.yml  iwyu.yml  pre_commit.yml  release.yml  semantic-release.yml
Doc/: Doxyfile  conf.py  displayable_manager_reminders.md  examples.md  extension_architecture.md  getting_started.md  index.md  library_architecture.md  requirements_docs.txt
Doc/diagrams/: layer_dm_collaboration.mmd
Docs/: Doxyfile  examples.md  extension_architecture.md  getting_started.md  index.md  introduction.md
Examples/Cpp/ModelGlowDM/: vtkMRMLModelGlowDisplayNode.cxx  vtkMRMLModelGlowDisplayNode.h  vtkMRMLModelGlowPipeline.cxx  vtkMRMLModelGlowPipeline.h
Examples/Python/CustomVR/: CustomVR.py
Examples/Python/CustomVR/CustomVRLib/: CustomVRPipeline.py  __init__.py
Examples/Python/ModelGlowDM/: CMakeLists.txt  ModelGlowDM.py
Examples/Python/PrintModelName/: PrintModelName.py
Examples/Python/PrintModelName/PrintModelNameLib/: __init__.py  print_model_name_dm_pipeline.py
LayerDM/: CMakeLists.txt  pyproject.toml  pytest.toml
LayerDM/Logic/: CMakeLists.txt  vtk.module
LayerDM/MRML/: CMakeLists.txt  extension.cmake  vtk.module  vtkMRMLLayerDMObjectEventObserver.cxx  vtkMRMLLayerDMObjectEventObserver.h  vtkMRMLLayerDMPythonUtil.cxx  vtkMRMLLayerDMPythonUtil.h  vtkMRMLLayerDMWidgetEventTranslationNode.cxx  vtkMRMLLayerDMWidgetEventTranslationNode.h  vtkMRMLNodePythonBridge.cxx  vtkMRMLNodePythonBridge.h  wheel.cmake
LayerDM/MRMLDM/: CMakeLists.txt  vtk.module  vtkMRMLLayerDMCameraSynchronizer.cxx  vtkMRMLLayerDMCameraSynchronizer.h  vtkMRMLLayerDMInteractionLogic.cxx  vtkMRMLLayerDMInteractionLogic.h  vtkMRMLLayerDMLayerManager.cxx  vtkMRMLLayerDMLayerManager.h  vtkMRMLLayerDMObjectEventObserver.h  vtkMRMLLayerDMObjectEventObserverScripted.cxx  vtkMRMLLayerDMObjectEventObserverScripted.h  vtkMRMLLayerDMPipelineCallbackCreator.h  vtkMRMLLayerDMPipelineCreatorI.h  vtkMRMLLayerDMPipelineFactory.cxx  vtkMRMLLayerDMPipelineFactory.h  vtkMRMLLayerDMPipelineI.cxx  vtkMRMLLayerDMPipelineI.h  vtkMRMLLayerDMPipelineManager.cxx  vtkMRMLLayerDMPipelineManager.h  vtkMRMLLayerDMPipelineScriptedCreator.cxx  vtkMRMLLayerDMPipelineScriptedCreator.h  vtkMRMLLayerDMPythonUtil.cxx  vtkMRMLLayerDMPythonUtil.h  vtkMRMLLayerDMScriptedPipelineBridge.cxx  vtkMRMLLayerDMScriptedPipelineBridge.h  vtkMRMLLayerDisplayableManager.cxx  vtkMRMLLayerDisplayableManager.h  vtkObjectEventObserver.h
LayerDM/MRMLDM/Python/: CMakeLists.txt  __init__.py  extension.cmake  vtkMRMLLayerDMScriptedPipeline.py  vtkMRMLNodeScripted.py  wheel.cmake
LayerDM/Testing/Python/: CMakeLists.txt  CameraSynchronizerTest.py  DisplayableManagerTest.py  EventTranslationNodeTest.py  InteractionLogicTest.py  LayerManagerTest.py  MRMLNodeScriptedTest.py  MockPipeline.py  ObjectEventObserverScriptedTest.py  PipelineFactoryTest.py  PipelineManagerTest.py
LayerDM/tests/: conftest.py  test_build_module.py  test_runtime.py
LayerDMSDK/: pyproject.toml
Python/: slicer_layer_dm.py  slicer_layerdm.py
