[build-system]
requires = ["scikit-build-core", "slicer-core-sdk==5.12.0", "vtk-sdk==9.6.0"]
build-backend = "scikit_build_core.build"

[project]
name = "slicer-layerdm"
version = "1.0.0"
authors = [
  { name = "Alexy Pellegrini", email = "alexy.pellegrini@kitware.com" }
]
dependencies = ["slicer-core"]
